--- a/desafio3.1/package.json
+++ b/desafio3.1/package.json
@@ -11,5 +11,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
